docs(project): :technologist: update swagger
